# AShareInsight

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  init-db.sql  mypy_imports.ini  pyproject.toml  pytest.ini  test_qwen_service_integration.py
.bmad-core/: core-config.yaml  install-manifest.yaml
.github/workflows/: type-check.yml
alembic/: env.py
alembic/versions/: 002_create_business_concepts_master_table.py  09888a569d40_convert_embedding_to_halfvec.py  10ae4d7268a7_update_hnsw_index_to_cosine.py  802b53cde839_fix_schema_mismatch_add_missing_columns.py  a044ad7fcc44_create_source_documents_table.py
config/: development.yaml  production.yaml
data/: README.md
data/annual_reports/2024/: 300257_开山股份_2024_annual_report.md  300663_科蓝软件_2024_annual_report.md  创业黑马_2024年年度报告摘要.md  双一科技_2024年年度报告摘要.md  奥士康_2024年年度报告摘要.md  奥海科技_2024年年度报告摘要.md  广和通_2024年年度报告摘要.md  必创科技_2024年年度报告摘要.md  扬帆新材_2024年年度报告摘要.md  江丰电子_2024年年度报告摘要.md  澄天伟业_2024年年度报告摘要.md  磁谷科技_2024年年度报告摘要.md  联合光电_2024年年度报告摘要.md
data/extracted/annual_reports/: 300257_开山股份_2024_annual_report_extracted.json  创业黑马_2024年年度报告摘要_extracted.json  双一科技_2024年年度报告摘要_extracted.json  广和通_2024年年度报告摘要_extracted.json  扬帆新材_2024年年度报告摘要_extracted.json  澄天伟业_2024年年度报告摘要_extracted.json  磁谷科技_2024年年度报告摘要_extracted.json  联合光电_2024年年度报告摘要_extracted.json
data/extracted/research_reports/: 奥士康-002913-联接世界、导通未来_extracted.json  奥来德-688378-材料实现单季度扭亏，中标京东方8.6代线设备订单_extracted.json  奥海科技-002993-端侧AI驱动充电龙头成长，新能源汽车_服务器业务贡献新增长极_extracted.json  百润股份-002568-威士忌产品矩阵初成_extracted.json  芭田股份-002170-小高寨磷矿迎来放量，助推业绩高增，二期扩能稳步推进_extracted.json
data/metadata/: company_index.json  document_index.json  processing_log.json
data/research_reports/2024/: 002747_埃斯顿_20240120_人形机器人新品发布.txt  688488_艾迪药业_20240115_公司信息更新报告.txt  北汽蓝谷-600733-25Q2销量同比+120%，H2多款新车型有望上市，销量可期.txt  北路智控-301195-公司跟踪点评：利润恢复增长，第二增长曲线值得期待.txt  奥士康-002913-联接世界、导通未来.txt  奥来德-688378-材料实现单季度扭亏，中标京东方8.6代线设备订单.txt  奥海科技-002993-端侧AI驱动充电龙头成长，新能源汽车_服务器业务贡献新增长极.txt  (+2 more)
docker/: docker-compose.yaml
docs/: Qwen3 Service API Documentation.md  RERANKER_CONFIG.md  architecture.md  dev-process-reflection-guide.md  fusion-algorithm.md  halfvec-support.md  langchain-upgrade-plan.md  prd.md  priciple.md  project-brief.md  qwen-integration.md  story-1.3-data-validation.md
docs/architecture/: 1-高阶架构-high-level-architecture.md  10-安全策略-security-strategy.md  10-安全策略.md  11-实施优先级.md  11-实施路线图.md  2-技术栈-tech-stack.md  2-技术栈.md  3-数据库详细设计.md  4-源代码目录结构-source-tree.md  5-api详细契约-api-detailed-contract.md  5-api详细契约.md  6-基础设施与部署策略-私有化部署版.md  7-错误处理与日志记录策略.md  8-测试策略-testing-strategy.md  8-测试策略.md  9-编码标准与规范.md  index.md
docs/prd/: 1-引言与背景.md  1-背景与目标.md  2-功能范围与实施优先级.md  2-项目目标与目的.md  3-关键技术假设.md  3-功能范围.md  4-功能需求-用户故事.md  5-非功能需求.md  6-关键技术栈.md  7-成功度量指标.md  index.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  2.6.story.md
prompt/: prompt_b.md
prompts/: prompt_a.md
reference/: batch_process.py  gemini_analysis.py  test_json_extraction.py
scripts/: backup_database.py  batch_extract_all.py  check_archived_data.py  check_db_timezone.py  check_doc_dates.py  check_imports.py  compatibility_validation.py  debug_market_data_issue.py  debug_rerank_api.py  fix_doc_dates.py  import_existing_data.py  init_database.py  list_good_test_companies.py  migrate_to_halfvec.sql  migrate_vector_dimension.py  process_market_filtered_companies_single_excel.py  run_batch_extract.sh  run_end_to_end_pipeline.py  set_database_timezone_permanent.py  set_db_timezone.py  setup_database.py  show_archived_data.sql  test_simple_timezone.py  test_story_2_3_api_e2e.py  test_story_2_3_validation.py  test_timezone_conversion.py  update_vector_dimensions.sql  validate_environment.py  validate_rerank_effectiveness.py  validate_story_2_2.py  verify_archive_data.py
scripts/deprecated/: check_test_data.py  debug_market_data_issue.py  test_api_db_integration.py  test_api_detailed.py  test_story_2_3_api_e2e.py  test_story_2_3_validation.py  test_text_to_embed.py  validate_rerank_effectiveness.py  validate_story_1_5_readiness.py  validate_story_2_1_2_2_full.py  validation_report_2_1_2_2.md
scripts/market_data/: init_market_data.py  sync_market_data_daily.py
scripts/migration/: 001_initial_schema.sql  003_create_vector_indices.py  004_add_file_path_unique_constraint.py  005_add_market_data_table.sql  analyze_duplicates.py  backup_tables.sh  cleanup_duplicates.py  create_file_path_index.py  fix_json_validation_errors.py  fix_missing_company_codes.py  init_db.py  resume_pending_files.py  safe_cleanup_duplicates.py
scripts/offline/: README.md  build_vector_indices.py  fix_incomplete_checkpoints.py  import_existing_data.py  process_archived_for_fusion.py  production_pipeline.py  retry_fusion.py  run_incremental_extract.sh  smart_incremental_extract.py
src/infrastructure/: factories.py
tests/core/: test_database.py  test_database_operations.py  test_logging_config.py  test_models.py  test_sqlalchemy_integration.py  test_vector_storage_integration.py
tests/e2e/: test_api_search.py
tests/fixtures/: __init__.py  vector_search_data.py
tests/integration/: test_build_vector_indices_script.py  test_compatibility_validation.py  test_configuration_files.py  test_data_driven.py  test_database_migration.py  test_docker_setup.py  test_environment_initialization.py  test_hnsw_performance.py  test_market_data_sync_integration.py  test_master_data_fusion_flow.py  test_project_structure.py  test_qwen_embedding_service.py  test_qwen_service_integration.py  test_ranking_algorithm.py  test_reranker_integration.py  test_search_api.py  test_search_api_market_filter_integration.py  test_vector_index_building_flow.py  test_vector_search.py  test_vector_store_connection.py
tests/unit/: test_checkpoint_manager.py
(+147 files in other folders)
